--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,9 +19,9 @@ jobs:
       - name: Build and push Docker images
         uses: docker/build-push-action@v2.4.0
         with:
-          context: ./jar/hardemic-pi-test
-          file: ./jar/hardemic-pi-test/Dockerfile
+          context: .
+          file: Dockerfile
           push: true
           tags: |
-            hardemic/monitor:latest
-            hardemic/monitor:${{github.run_number}} 
+            hardemic/monitor-java:latest
+            hardemic/monitor-java:${{github.run_number}} 
