--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
 jobs:
   CI:
-    runs-on: ubuntu-latest 
+    runs-on: ubuntu-20.04
     
     steps:
       - uses: actions/checkout@v2
