--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,10 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Docker Login
-        uses: docker/login-action@v1.9.0
+        uses: docker/login-action@v2.0.0
         with:
-          username: ${{secrets.DOCKERHUB_USER}} 
-          password: ${{secrets.DOCKERHUB_PWD}} 
+          username: hardemic
+          password: Hards@2022
 
       - name: Build and push Docker images
         uses: docker/build-push-action@v2.4.0
