--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,16 +5,16 @@ on:
   workflow_dispatch:
 jobs:
   CI:
-    runs-on: ubuntu-latest 
+    runs-on: ubuntu-20.04
     
     steps:
       - uses: actions/checkout@v2
 
       - name: Docker Login
-        uses: docker/login-action@v1.9.0
+        uses: docker/login-action@v2.0.0
         with:
-          username: ${{secrets.FTP_USER}} # hardemic@2022
-          password: ${{secrets.FTP_PASSWORD}} # hardmic@2022
+          username: ${{secrets.DOCKERHUB_USER}}
+          password: ${{secrets.DOCKERHUB_PWD}}
 
       - name: Build and push Docker images
         uses: docker/build-push-action@v2.4.0
