--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,8 @@ jobs:
         uses: docker/login-action@v2.0.0
         
         with:
-          username: hardemic
-          password: Hards@2022
+          username: ${{secrets.DOCKERHUB_USER}}
+          password: ${{secrets.DOCKERHUB_PWD}}
 
       - name: Build and push Docker images
         uses: docker/build-push-action@v2.4.0
