--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
             <version>1.0.1</version>
         </dependency>
         <!--Banco local-->
-         <dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-dbcp2</artifactId>
             <version>2.8.0</version>
@@ -33,18 +33,18 @@
         
         <!-- MySQL e MariaDB -->
         <dependency>
-        <groupId>mysql</groupId>
-        <artifactId>mysql-connector-java</artifactId>
-        <version>8.0.16</version>
-        <!-- ou versão que já existir na .m2 local -->
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.16</version>
+            <!-- ou versão que já existir na .m2 local -->
         </dependency>
         <!-- SQL Server -->
         <dependency>
-        <groupId>com.microsoft.sqlserver</groupId>
-        <artifactId>mssql-jdbc</artifactId>
-        <version>7.2.2.jre11</version>
-        <!-- ou versão 7.2.2.jre11, se sua JDK for a 11 -->
-        <!-- ou versão que já existir na .m2 local -->
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>7.2.2.jre11</version>
+            <!-- ou versão 7.2.2.jre11, se sua JDK for a 11 -->
+            <!-- ou versão que já existir na .m2 local -->
         </dependency>
         <!-- Para se utilizar JSON -->
         <dependency>
@@ -57,15 +57,20 @@
             <artifactId>json-simple</artifactId>
             <version>1.1.1</version>
         </dependency>
-<!--        <dependency>
+        <!--        <dependency>
             <groupId>unknown.binary</groupId>
             <artifactId>AbsoluteLayout</artifactId>
             <version>SNAPSHOT</version>
         </dependency>-->
+        <dependency>
+            <groupId>io.socket</groupId>
+            <artifactId>socket.io-client</artifactId>
+            <version>2.0.1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
-           <plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.0.2</version>
@@ -90,7 +95,7 @@
                     </descriptorRefs>
                 </configuration>
                 <executions>
-                     <execution>
+                    <execution>
                         <id>make-assembly</id>
                         <phase>package</phase>
                         <goals>
@@ -100,7 +105,7 @@
                 </executions>
             </plugin>
         </plugins>
-<!--         <plugins>
+        <!--         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
@@ -126,7 +131,7 @@
                 </executions>
             </plugin>
         </plugins>-->
-         <resources>
+        <resources>
             <resource>
                 <directory>src/main/resources</directory>
                 <filtering>true</filtering>
