--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,23 +1,18 @@
 version: "3.7"
 services:
   app:
+    container_name: monitor
     stdin_open: true
     tty: true
     image: hardemic/monitor
     restart: always
     hostname: ubuntu01
-    # app_image:
-    #   stdin_open: true
-    #   tty: true
-    #   image: hardemic/monitor:v2
-    #   restart: always
-    #   hostname: ubuntu01
-#    depends_on:
-#        - db
-#  db:
-#    image: mysql
-#    command: --default-authentication-plugin=mysql_native_password
-#    restart: always
-#    environment:
-#      MYSQL_ROOT_PASSWORD: example
-
+  database:
+    container_name: database
+    image: mysql
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    ports:
+      - "3306:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: docker
