--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,15 +4,28 @@ services:
     container_name: monitor
     stdin_open: true
     tty: true
-    image: hardemic/monitor
+    build:
+      context: .
+      dockerfile: Dockerfile
+    # image: hardemic/monitor
     restart: always
     hostname: ubuntu01
+    depends_on:
+      - database
   database:
     container_name: database
-    image: mysql
+    build:
+      context: .
+      dockerfile: Dockerfile.local
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     ports:
       - "3306:3306"
+    expose:
+    # Opens port 3306 on the container
+    - "3306"
     environment:
-      MYSQL_ROOT_PASSWORD: docker
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: hardemic
+      MYSQL_USERNAME: docker
+      MYSQL_PASSWORD: docker
