--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -1,3 +1,13 @@
 FROM mysql
+
+ENV MYSQL_ROOT_PASSWORD=root
+ENV MYSQL_DATABASE=hardemic
+
+
 ADD dump.sql /docker-entrypoint-initdb.d/script.sql
 RUN chmod -R 775 /docker-entrypoint-initdb.d
+
+
+
+
+      
