change compose to pull docker hub images

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,10 +4,7 @@ services:
     container_name: monitor
     stdin_open: true
     tty: true
-    build:
-      context: .
-      dockerfile: Dockerfile
-    # image: hardemic/monitor:latest
+    image: hardemic/monitor:latest
     restart: always
     hostname: ubuntu01
     depends_on:
@@ -16,16 +13,13 @@ services:
       - mysql-compose-network
   database:
     container_name: database
-    image: mysql:5.7
+    image: hardemic/database
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     ports:
       - "3306:3306"
-    build:
-      context: .
-      dockerfile: Dockerfile.local
     expose:
-    # Opens port 3306 on the container
+   
     - "3306"
     environment:
       MYSQL_ROOT_PASSWORD: root
@@ -34,7 +28,7 @@ services:
       MYSQL_PASSWORD: docker
     volumes:
       - mysqlvol:/var/lib/mysql
-      # - ./dump.sql:/docker-entrypoint-initdb.d/dump.sql
+    
     networks:
       - mysql-compose-network
 volumes:
